clusters/boutique/platform-configs/kyverno/policies/verify-image-sig.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-keyless-cosign
      match:
        any:
        - resources:
            kinds:
            - Pod
      verifyImages:
      - image: "registry.digitalocean.com/idpreg/*"
        key: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEFser5E5Yw6U9xkMvxr7OG4wPhyaY
[...]
          -----END PUBLIC KEY-----
